DX-1000 Update NPM pipelines