@@ -1,16 +1,12 @@
 package de.microtema.maven.plugin.github.workflow;
 
-import de.microtema.maven.plugin.github.workflow.job.TemplateStageService;
 import de.microtema.maven.plugin.github.workflow.job.dotnet.*;
 import de.microtema.maven.plugin.github.workflow.model.MetaData;
 import de.microtema.model.converter.util.ClassUtil;
-import org.apache.commons.lang3.StringUtils;
 
 import java.io.File;
 import java.io.PrintWriter;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 import static de.microtema.maven.plugin.github.workflow.PipelineGeneratorUtil.*;
@@ -62,36 +58,20 @@ public class DotnetPipelineGeneratorMojo extends PipelineGeneratorMojo {
 
     void applyDefaultVariables() {
 
-        defaultVariables.put("APP_NAME", project.getArtifactId());
-        defaultVariables.put("APP_DISPLAY_NAME", appName);
-
-        // defaultVariables.put("GITHUB_TOKEN", "${{ secrets.GITHUB_TOKEN }}");
-
-        if (!downStreams.isEmpty()) {
-
-            /*
-            String variableValue = variables.getOrDefault("REPO_ACCESS_TOKEN", "${{ secrets.REPO_ACCESS_TOKEN }}");
-
-            variableValue = PipelineGeneratorUtil.wrapSecretVariable(variableValue);
-
-            variables.put("REPO_ACCESS_TOKEN", variableValue);
-             */
-        }
-    }
-
-    void executeImpl(MetaData metaData, List<MetaData> workflows) {
+        defaultVariables.put("APP_NAME", appName);
 
         defaultVariables.put("VERSION", project.getVersion());
         defaultVariables.put("GIT_COMMIT", "$(Build.SourceVersion)");
+        defaultVariables.put("GIT_BRANCH", "$(Build.SourceBranchName)");
         defaultVariables.put("REPO_NAME", "$(Build.Repository.Name)");
         defaultVariables.put("BRANCH_NAME", "$[replace(variables['Build.SourceBranch'], 'refs/heads/', '')]");
 
         defaultVariables.put("isDevelop", "$[eq(variables['Build.SourceBranch'], 'refs/heads/develop')]");
         defaultVariables.put("isRelease", "$[startsWith(variables['Build.SourceBranch'], 'refs/heads/release/')]");
         defaultVariables.put("isMaster", "$[eq(variables['Build.SourceBranch'], 'refs/heads/master')]");
+    }
 
-       // defaultVariables.put("REPO_ORGANISATION", "mariotema");
-       // defaultVariables.put("REPO_PROJECT", "microtema");
+    void executeImpl(MetaData metaData, List<MetaData> workflows) {
 
         defaultVariables.putAll(variables);
 
@@ -102,8 +82,7 @@ public class DotnetPipelineGeneratorMojo extends PipelineGeneratorMojo {
         List<String> branches = workflowFiles.stream()
                 .map(MetaData::getBranchPattern)
                 .collect(Collectors.toList()).stream()
-                .sorted().collect(Collectors
-                        .toList());
+                .sorted().collect(Collectors.toList());
 
         pipeline = pipeline
                 .replace("%TRIGGER%", String.join(", ", branches))
@@ -121,14 +100,5 @@ public class DotnetPipelineGeneratorMojo extends PipelineGeneratorMojo {
         } catch (Exception e) {
             throw new IllegalStateException(e);
         }
-    }
-
-    String getStagesTemplate(MetaData metaData, List<TemplateStageService> templateStageServices) {
-
-        return templateStageServices.stream()
-                .map(it -> it.getTemplate(this, metaData))
-                .filter(Objects::nonNull)
-                .map(it -> PipelineGeneratorUtil.trimEmptyLines(it, 2))
-                .collect(Collectors.joining("\n\n"));
     }
 }
